--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
     </header>
 
-    <div class="nav">
+    <nav class="nav">
       <div class="nav_logo">
         <img src="https://demo.themeies.com/silon/images/logo.png" alt="logo" />
       </div>
@@ -56,7 +56,7 @@
         </span></a>
         <a href="#"><span class="ti-heart"><span class="counter">09</span></span></a>
       </div>
-    </div>
+    </nav>
 
     <div class="banner">
       <div class="banner_left">
@@ -72,7 +72,6 @@
         id="banner"
       /> 
     </div>
-
     </div>
 
     <section class="title">
